<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MyRuns2</string>
    <string name="setting_name">Lab4Setting</string>
    <string name="action_settings">Settings</string>
    <string name="profile_view">Profile View:</string>
    <string name="button_change">Change</string>
    <string name="title_activity_camera_control">CameraControlActivity</string>
    <string name="name">Name:</string>
    <string name="enter_name">Enter your name here:</string>
    <string name="email">Email:</string>
    <string name="your_email">Your email</string>
    <string name="phone">Phone:</string>
    <string name="your_phone">Your phone</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="class_">Class:</string>
    <string name="class_hint">"e.g., 2012"</string>
    <string name="major">Major:</string>
    <string name="major_hint">Your major here</string>
    <string name="change">Change</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="profile_photo_file_name">photo</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_map">Map</string>
    <string name="input_type">Input Type:</string>
    <string name="activity_type">Activity Type:</string>
    <string name="start">Start</string>
    <string name="sync">Sync</string>
    <string name="acc_pref">Account Preferences</string>
    <string name="user_profile">User Profile</string>
    <string name="up_hint">Names, Email,Class,etc</string>
    <string name="privacy">Privacy Settings</string>
    <string name="ps_hint">Posting your records anonymously</string>
    <string name="add_setts">Additional Settings</string>
    <string name="unit_pref">Unit Preference</string>
    <string name="upref_hint">Select the units in which you would like to see distance values</string>
    <string name="comment">Comment</string>
    <string name="c_hint">Any suggestions to this course?</string>
    <string name="misc">Misc.</string>
    <string name="class_page">Class homepage</string>
    <string name="c_website">http://www.cs.dartmouth.edu/~campbell</string>
    <string name="date_text">Date</string>
    <string name="manual_input_activity_title">Manual Input</string>
    <string name="time_text">Time</string>
    <string name="duration_text">Duration</string>
    <string name="distance_text">Distance</string>
    <string name="calories_text">Calories</string>
    <string name="hr_text">Heart Rate</string>
    <string name="comment_text">Comment</string>

    <string-array name="input_types">
        <item>Manual Entry</item>
        <item>GPS</item>
        <item>Automatic</item>
    </string-array>

    <string-array name="activity_types">
        <item>Running</item>
        <item>Walking</item>
        <item>Standing</item>
        <item>Cycling</item>
        <item>Hiking</item>
        <item>Downhill Skiing</item>
        <item>Cross-County Skiing</item>
        <item>Snowboarding</item>
        <item>Skating</item>
        <item>Mountain Biking</item>
        <item>Wheelchair</item>
        <item>Elliptical</item>
        <item>Rowing</item>
        <item>Other</item>
    </string-array>

</resources>
