<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" tools:context="com.example.doug.lab4act.Start">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/input_type"/>

        <Spinner
            android:id="@+id/input_spinner"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:entries="@string-array/input_types"/>

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/activity_type"/>

        <Spinner
            android:id="@+id/activity_spinner"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:entries="@string-array/activity_types"/>
        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingBottom="80dp">

            <Button
                android:id="@+id/start_button"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_above="@+id/sync_button"
                android:text="@string/start"/>

            <Button
                android:id="@+id/sync_button"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:text="@string/sync"/>

        </RelativeLayout>

    </LinearLayout>

</FrameLayout>
